# Sugar

./: .gitignore  CMakeLists.txt  CMakePresets.json  ReadMe.md
antlr/: Sugar.g4
antlr4/: Sugar.interp  SugarBaseListener.cpp  SugarBaseListener.h  SugarBaseVisitor.cpp  SugarBaseVisitor.h  SugarLexer.cpp  SugarLexer.h  SugarLexer.interp  SugarLexer.tokens  SugarListener.cpp  SugarListener.h  SugarParser.cpp  SugarParser.h  SugarVisitor.cpp  SugarVisitor.h
cmake/: ExternalAntlr4Cpp.cmake
docs/: SugarDoc.md  SugarDocTemplate.md  SugarLangDesign.md  build_docs.py
docs/contents/misc/: InstallBoost.md  InstallLLVM.md
docs/contents/windows_shit/: InstallLLVM.md
programs/test_programs/: boolean_logic.sgr  classes.sgr  default_assignment.sgr  for_loop.sgr  functions.sgr  list_ops_and_cmprs.sgr  scoped_init.sgr  switch.sgr  vars_and_exressions.sgr
purged_content/: ReadMe.md  bytecodedef.txt
purged_content/lexer/: lexer.h
purged_content/parser/: node.h  parser.cpp  parser.h
purged_content/runtime/: irmruntime.cpp  irmruntime.h
src/: CMakeLists.txt  main.cpp
src/caramel-compiler/: CMakeLists.txt
src/caramel-compiler/antlr/: Sugar.g4
src/caramel-compiler/src/: RisVisitor.h  SugarVisitorImpl.cpp  SugarVistorImpl.h  main.cpp
src/llvm_compiler/: CMakeLists.txt
src/parser/: CMakeLists.txt
src/runtime/: CMakeLists.txt
src/salt-llvm-compiler/: CMakeLists.txt
src/salt-llvm-compiler/src/: main.cpp
src/util/output-manager/: CMakeLists.txt
src/util/output-manager/src/output-manager/: cli-output-manager.cpp  cli-output-manager.h  ioutput-manager.h
test/: grammar_test.py
